// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-transfer ezd-transfer-rtl"
>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-checkbox-rtl ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-dropdown-rtl ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        0 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <div
        class="ezd-transfer-list-body-not-found"
      >
        <div
          class="ezd-empty ezd-empty-normal ezd-empty-rtl ezd-empty-small"
        >
          <div
            class="ezd-empty-image"
          >
            <svg
              class="ezd-empty-img-simple"
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  class="ezd-empty-img-simple-ellipse"
                  cx="32"
                  cy="33"
                  rx="32"
                  ry="7"
                />
                <g
                  class="ezd-empty-img-simple-g"
                  fill-rule="nonzero"
                >
                  <path
                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                  />
                  <path
                    class="ezd-empty-img-simple-path"
                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="ezd-empty-description"
          >
            No Data
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ezd-transfer-operation"
  >
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only ezd-btn-rtl"
      disabled=""
      type="button"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only ezd-btn-rtl"
      disabled=""
      type="button"
    >
      <span
        aria-label="right"
        class="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-checkbox-rtl ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-dropdown-rtl ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        0 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <div
        class="ezd-transfer-list-body-not-found"
      >
        <div
          class="ezd-empty ezd-empty-normal ezd-empty-rtl ezd-empty-small"
        >
          <div
            class="ezd-empty-image"
          >
            <svg
              class="ezd-empty-img-simple"
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  class="ezd-empty-img-simple-ellipse"
                  cx="32"
                  cy="33"
                  rx="32"
                  ry="7"
                />
                <g
                  class="ezd-empty-img-simple-g"
                  fill-rule="nonzero"
                >
                  <path
                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                  />
                  <path
                    class="ezd-empty-img-simple-path"
                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="ezd-empty-description"
          >
            No Data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should render correctly 1`] = `
<div
  class="ezd-transfer"
>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-checkbox-wrapper-checked ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox ezd-checkbox-checked"
        >
          <input
            checked=""
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        1/2 items
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item ezd-transfer-list-content-item-checked"
        >
          <label
            class="ezd-checkbox-wrapper ezd-checkbox-wrapper-checked ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox ezd-checkbox-checked"
            >
              <input
                checked=""
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          />
        </li>
        <li
          class="ezd-transfer-list-content-item ezd-transfer-list-content-item-disabled"
        >
          <label
            class="ezd-checkbox-wrapper ezd-checkbox-wrapper-disabled ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox ezd-checkbox-disabled"
            >
              <input
                class="ezd-checkbox-input"
                disabled=""
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ezd-transfer-operation"
  >
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      type="button"
    >
      <span
        aria-label="right"
        class="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        1 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetKey 1`] = `
<div
  class="ezd-transfer"
>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        1 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item"
          title="a"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          >
            a
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ezd-transfer-operation"
  >
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="right"
        class="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        2 items
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item"
          title="c"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          >
            c
          </span>
        </li>
        <li
          class="ezd-transfer-list-content-item"
          title="b"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          >
            b
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Transfer should support render value and label in item 1`] = `
<div
  class="ezd-transfer"
>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        1 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item"
          title="title value"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          >
            label
          </span>
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ezd-transfer-operation"
  >
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="right"
        class="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        0 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <div
        class="ezd-transfer-list-body-not-found"
      >
        <div
          class="ezd-empty ezd-empty-normal ezd-empty-small"
        >
          <div
            class="ezd-empty-image"
          >
            <svg
              class="ezd-empty-img-simple"
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  class="ezd-empty-img-simple-ellipse"
                  cx="32"
                  cy="33"
                  rx="32"
                  ry="7"
                />
                <g
                  class="ezd-empty-img-simple-g"
                  fill-rule="nonzero"
                >
                  <path
                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                  />
                  <path
                    class="ezd-empty-img-simple-path"
                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="ezd-empty-description"
          >
            No Data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`immutable data dataSource is frozen 1`] = `
<div
  class="ezd-transfer"
>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        1 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <ul
        class="ezd-transfer-list-content"
      >
        <li
          class="ezd-transfer-list-content-item"
        >
          <label
            class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
          >
            <span
              class="ezd-checkbox"
            >
              <input
                class="ezd-checkbox-input"
                type="checkbox"
              />
              <span
                class="ezd-checkbox-inner"
              />
            </span>
          </label>
          <span
            class="ezd-transfer-list-content-item-text"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    class="ezd-transfer-operation"
  >
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="right"
        class="anticon anticon-right"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="right"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
          />
        </svg>
      </span>
    </button>
    <button
      class="ezd-btn ezd-btn-primary ezd-btn-sm ezd-btn-icon-only"
      disabled=""
      type="button"
    >
      <span
        aria-label="left"
        class="anticon anticon-left"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="left"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="ezd-transfer-list"
  >
    <div
      class="ezd-transfer-list-header"
    >
      <label
        class="ezd-checkbox-wrapper ezd-transfer-list-checkbox"
      >
        <span
          class="ezd-checkbox"
        >
          <input
            class="ezd-checkbox-input"
            type="checkbox"
          />
          <span
            class="ezd-checkbox-inner"
          />
        </span>
      </label>
      <span
        aria-label="down"
        class="anticon anticon-down ezd-dropdown-trigger ezd-transfer-list-header-dropdown"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
      <span
        class="ezd-transfer-list-header-selected"
      >
        0 item
      </span>
      <span
        class="ezd-transfer-list-header-title"
      />
    </div>
    <div
      class="ezd-transfer-list-body"
    >
      <div
        class="ezd-transfer-list-body-not-found"
      >
        <div
          class="ezd-empty ezd-empty-normal ezd-empty-small"
        >
          <div
            class="ezd-empty-image"
          >
            <svg
              class="ezd-empty-img-simple"
              height="41"
              viewBox="0 0 64 41"
              width="64"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="none"
                fill-rule="evenodd"
                transform="translate(0 1)"
              >
                <ellipse
                  class="ezd-empty-img-simple-ellipse"
                  cx="32"
                  cy="33"
                  rx="32"
                  ry="7"
                />
                <g
                  class="ezd-empty-img-simple-g"
                  fill-rule="nonzero"
                >
                  <path
                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                  />
                  <path
                    class="ezd-empty-img-simple-path"
                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="ezd-empty-description"
          >
            No Data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
